fix: Fix null pointer exception of post attachments